Fix warning display